<resources>
    <string name="app_name">"COMP4342 Music Portal"</string>
    <string name="app_title">"Welcome To COMP4342 Music Portal | Listen To Music Anywhere Anytime"</string>
    <string name="Log_In">"Log In"</string>
    <string name="Forgotpw">"Forgot Password?"</string>
    <string name="Create_ac">"Create New Account"</string>
    <string name="Register">"Registration"</string>
    <string name="Register_button">"Register Now!"</string>
    <string name="Back_button">"Back To Home Page"</string>
    <string name="All_songs_button">"All Songs"</string>
    <string name="playlist_button">"Playlists"</string>
    <string name="My_playlist_title">"Playlists"</string>
    <string name="Favourites_button">"Favourites"</string>
    <string name="Logout_button">"Logout"</string>
    <string name="add_to_favourite_button">"Add to Favourites"</string>
    <string name="add_to_playlist_button">"Add to Playlist"</string>
    <string name="remove_button">"Remove"</string>
    <string name="rename_button">"Rename"</string>
</resources>
