<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    tools:context=".MainActivity">

    <SearchView
        android:id="@+id/search_bar_menu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gradient_background"
        android:iconifiedByDefault="false"
        android:inputType="text"
        android:queryHint="Search for songs, artists and more"
        android:saveEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="290dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/index"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/menu" />

    </FrameLayout>

    <TextView
        android:id="@+id/Now_playing"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="21sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/gradient_background"
        app:layout_constraintBottom_toTopOf="@+id/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <TableLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:background="#B4A9A9"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/All_songs"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:background="@drawable/gradient_background2"
                android:text="@string/All_songs_button"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:id="@+id/Favourites"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:background="@drawable/gradient_background2"
                android:text="@string/Favourites_button"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/My_playlist"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:background="@drawable/gradient_background2"
                android:text="@string/playlist_button"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:id="@+id/Logout"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_margin="0.5dp"
                android:background="@drawable/gradient_background2"
                android:text="@string/Logout_button"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
